tests/security/taintedCurlSetOpt/output.txt
ERROR: TaintedData - input.hack:2:31 - Detected tainted curl header